[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Kenny Johansson <wirehell@gmail.com>"]
edition = "2018"

build = "build.rs" # LALRPOP preprocessing


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
permutate = "0.3.2"
regex = "0.2.0"
itertools = "0.8.2"
num = "0.2.0"
rand = "0.7.2"
petgraph = "0.4.13"
geo = "0.12.2"

[build-dependencies]
#lalrpop = "0.17.2"
